<resources>
    <string name="app_name">FKPN</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="sponsor">Afiliasi</string>
    <string name="name">nama</string>
    <string name="email">Email</string>
    <string name="validation_password">Konfrimasi Password</string>
    <string name="account_id">Nomor KTP Lenkap</string>
    <string name="phone_number">Nomor Telfon</string>
    <string name="province">Profinsi</string>
    <string name="district">Kota/Kabupaten</string>
    <string name="sub_district">Keluarahan</string>
    <string name="village">Kel/Desa</string>
    <string name="number_address">Nomor Rumah</string>
    <string name="description_address">RT/RW. Keterangan Alamat Rumah</string>
    <string name="position">Posisi</string>
    <string name="position_description">Geser Ke Kiri Atau Ke Kanan Untuk Menentukan Posisi</string>
    <string name="alert_massage">Data yang di inputkan harus sesuai KTP</string>
    <string name="vocer_point">Vocer Point</string>
    <string name="ticket">Ticket</string>
    <string name="bonus">Bonus</string>
    <string name="withdraw">Withdraw</string>
    <string name="profile">Profile</string>
    <string name="binary">Binary</string>
    <string name="package_join">Paket Join</string>
    <string name="package_1">Rp 500.000</string>
    <string name="package_2">Rp 5.000.000</string>
    <string name="package_3">Rp 1.000.000</string>
    <string name="package_4">Rp 10.000.000</string>
    <string name="deposit">Deposit</string>
    <string name="request_deposit">Request Deposit</string>
    <string name="rp">Rp</string>
    <string name="exp_rp">exp : 9999999</string>
    <string name="nominal_deposit">Nominal Deposit</string>
    <string name="ktp_number">nomor KTP</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_system">System</string>
    <string name="banner">Banner</string>

    <string name="account">Akun</string>
    <string name="update_profile">Ubah Profile</string>
    <string name="password_x">Password Transaksi</string>
    <string name="security">Keamanan</string>
    <string name="logout">Logout</string>
    <string name="upload_ktp">Upload KTP</string>
    <string name="refresh">Refresh</string>
    <string name="bank">BANK</string>
    <string name="bankUsername">Nama</string>
    <string name="bankAccount">Nomor Rekening</string>
    <string name="transfer">Transfer</string>
    <string name="nominal">Nominal</string>
    <string name="copy">Copy to Clipboard</string>
    <string name="invoice">Nominal Transfer</string>
    <string name="register_down_line">Register</string>
    <string name="validation_password_x">Validasi Password Teransaksi</string>
    <string name="send_ticket">Kirim Tiket</string>
    <string name="ticket_exp_9999999">Jumlah Ticket exp : 9999999</string>
    <string name="username_yang_akan_anda_kirimi_tiket">Username yang akan anda kirimi tiket</string>
    <string name="old_password">Password Lama</string>
    <string name="save">Simpan</string>
</resources>
