<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/logo"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/sponsorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/sponsor"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/validationPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/validation_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/passwordXEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/password_x"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/validationPasswordXEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/validation_password_x"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/accountIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/account_id"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/provinceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/province"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/districtEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/district"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/subDistrictEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/sub_district"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/villageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/village"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/numberAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/number_address"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/descriptionAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/description_address"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/position"
                android:textColor="@color/textPrimary" />

            <SeekBar
                android:id="@+id/positionSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:max="1"
                android:progress="0"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryLight"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/position_description"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/alert_massage"
            android:textColor="@color/textPrimary"
            android:textSize="12sp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_success"
            android:text="@string/register"
            android:textColor="@color/textSecondary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    </LinearLayout>

</ScrollView>