<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".content.profile.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/provinceEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/province"
                android:inputType="textPersonName|textPostalAddress"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryLight"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/districtEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/district"
                android:inputType="textPersonName|textPostalAddress"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryLight"
                tools:targetApi="lollipop" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/subDistrictEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/sub_district"
                android:inputType="textPersonName|textPostalAddress"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryLight"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/villageEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/village"
                android:inputType="textPersonName|textPostalAddress"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimaryLight"
                tools:targetApi="lollipop" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/descriptionAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/description_address"
            android:inputType="textPersonName|textPostalAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:targetApi="lollipop" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/numberAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/number_address"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:ignore="TextFields"
            tools:targetApi="lollipop" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/button_success"
            android:text="@string/save"
            android:textColor="@color/textSecondary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

</ScrollView>