<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".TokenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/logo"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="@color/textSecondary"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecondary"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            tools:ignore="LabelFor"
            tools:targetApi="lollipop" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_success"
            android:text="@string/login"
            android:textColor="@color/textSecondary" />


    </LinearLayout>

</ScrollView>