<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".content.menu.TicketActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/username_yang_akan_anda_kirimi_tiket"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryLight" />

    <EditText
        android:id="@+id/ticketEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/ticket_exp_9999999"
        android:inputType="numberDecimal"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryLight" />

    <Button
        android:id="@+id/ticketButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_success"
        android:text="@string/send_ticket"
        android:textColor="@color/textSecondary" />

</LinearLayout>